--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -22,12 +22,14 @@
   --fs-25: 2.5rem;
   --fs-26: 2.6rem;
   --fs-27: 2.7rem;
+  --fs-28: 2.8rem;
   --fs-30: 3rem;
   --fs-31: 3.1rem;
   --fs-32: 3.2rem;
   --fs-39: 3.9rem;
   --fs-48: 4.8rem;
   --fs-50: 5rem;
+  --fs-60: 6rem;
   --fs-61: 6.1rem;
 
   // * FONT WEIGHT
