--- a/src/components/ui/filter-bar/index.module.scss
+++ b/src/components/ui/filter-bar/index.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   height: 6.5rem;
-  background-color: black;
+  background-color: #212121;
   margin-top: 10px;
   width: 100%;
 
