--- a/src/pages/podcast/detail/index.module.scss
+++ b/src/pages/podcast/detail/index.module.scss
@@ -18,6 +18,10 @@
       font-size: var(--fs-20);
       font-weight: var(--fw-5);
     }
+    &__paragraph{
+      font-size: var(--fs-16);
+      font-weight: var(--fw-4);
+    }
   }
 }
 
