--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -19,14 +19,18 @@
   --fs-18: 1.8rem;
   --fs-19: 1.9rem;
   --fs-20: 2rem;
+  --fs-22: 2.2rem;
   --fs-25: 2.5rem;
   --fs-26: 2.6rem;
   --fs-27: 2.7rem;
   --fs-28: 2.8rem;
+  --fs-29: 2.9rem;
   --fs-30: 3rem;
   --fs-31: 3.1rem;
   --fs-32: 3.2rem;
   --fs-39: 3.9rem;
+  --fs-40: 4rem;
+  --fs-44: 4.4rem;
   --fs-48: 4.8rem;
   --fs-50: 5rem;
   --fs-60: 6rem;
