--- a/src/sections/sliders/index.module.scss
+++ b/src/sections/sliders/index.module.scss
@@ -1,22 +1,34 @@
 .slider {
-    :global(.swiper-wrapper) {
-      padding-bottom: 20px;
-    }
-    :global(.swiper-pagination) {
-      bottom: 0 !important;
-      text-align: right;
-      background-color: #E5E5E5 !important;
-    }
-  
+  :global(.swiper-wrapper) {
+    padding-bottom: 20px;
+  }
+  :global(.swiper-pagination) {
+    bottom: 0 !important;
+    text-align: right;
+    background-color: #e5e5e5 !important;
+  }
+
+  &__header {
+    font-size: var(--fs-31);
+    font-weight: var(--fw-6);
+  }
+
+  &__seeAll {
+    color: black;
+    text-decoration: underline;
+    font-size: var(--fs-18);
+    line-height: 3rem;
+  }
+}
+
+@media (max-width: 1300px) {
+  .slider {
     &__header {
-      font-size: var(--fs-30);
-      font-weight: var(--fw-6);
+      font-size: var(--fs-25);
     }
-  
     &__seeAll {
-      color: black;
-      text-decoration: underline;
-      font-size: var(--fs-20);
-      line-height: 30px;
+      font-size: var(--fs-16);
+      line-height: 2.5rem;
     }
   }
+}
