--- a/src/components/Comments/index.module.scss
+++ b/src/components/Comments/index.module.scss
@@ -149,11 +149,11 @@ textarea::placeholder {
   color: var(--gray);
 }
 
-label {
-  height: 0;
-  width: 0;
-  visibility: hidden;
-}
+// label {
+//   height: 0;
+//   width: 0;
+//   visibility: hidden;
+// }
 
 button {
   cursor: pointer;
