--- a/src/layout/app-layout/style.module.scss
+++ b/src/layout/app-layout/style.module.scss
@@ -33,6 +33,7 @@
 .nav {
   height: 100%;
   padding: 2.6rem 3.7rem !important;
+  // padding-top: 6.5rem !important;
 }
 .avatar {
   background: red;
@@ -335,7 +336,7 @@
       width: 100%;
     }
     &__content {
-      margin-top: 3rem;
+      margin-top: 0;
       width: 100%;
     }
   }
@@ -372,6 +373,20 @@
       width: 100%;
       height: 2rem;
     }
+    .mobilePlayer {
+      padding: 0.225rem 0;
+      display: flex;
+      flex-direction: column;
+      margin: 0 auto;
+    }
+  }
+
+  .nav {
+    padding-top: 6.5rem !important;
+  }
+
+  .navOnMobile {
+    margin-top: 4.5rem !important;
   }
 
   .sidebar {
@@ -408,3 +423,11 @@
     }
   }
 }
+
+// @media (max-width: 375px) {
+//   .navbar {
+//     .mobilePlayer {
+//       margin-right: calc(100% - 35rem) !important;
+//     }
+//   }
+// }
