--- a/src/sections/mobile-player/index.module.scss
+++ b/src/sections/mobile-player/index.module.scss
@@ -4,7 +4,11 @@
     border: unset;
     //padding: 0;
     // margin: 0;
-    color: black;
+    // color: black;
+  }
+  button:nth-child(1) {
+    border: unset;
+    background: unset;
   }
 
   .icon {
@@ -17,8 +21,6 @@
 
     &__item {
       color: #fff;
-      // color: red !important;
-      //color: black;
     }
   }
   .switch {
@@ -28,10 +30,51 @@
   }
 }
 
-// .light {
-//   color: black;
-// }
+.authenticated {
+  color: white;
+}
 
-// .dark {
-//   color: #fff;
-// }
+@media (max-width: 576px) {
+  .mobilePlayer {
+    margin-top: 1.4rem;
+
+    &__item {
+      width: 2.5rem;
+      height: 2.8rem;
+    }
+    &__favorite {
+      width: 2.4rem;
+      height: 2.3rem;
+      color: white;
+    }
+
+    .icon {
+      border: 0.1rem solid #fff;
+      width: 3.2rem;
+      height: 3.2rem;
+      border-radius: 30px;
+      background: black !important;
+      // background: #fff;
+    }
+    .switch {
+      position: absolute;
+      // margin-left: 3rem;
+      right: 1rem;
+    }
+
+    .song {
+      display: -webkit-box;
+      -webkit-line-clamp: 1;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
+  }
+}
+
+.dark {
+  color: black;
+}
+
+.light {
+  color: #fff;
+}
