--- a/src/sections/mobile-player/index.module.scss
+++ b/src/sections/mobile-player/index.module.scss
@@ -30,21 +30,18 @@
   }
 }
 
-.authenticated {
-  color: white;
-}
-
 @media (max-width: 576px) {
   .mobilePlayer {
     margin-top: 1.4rem;
 
     &__item {
-      width: 2.5rem;
-      height: 2.8rem;
+      width: 2rem;
+      height: 2rem;
     }
+
     &__favorite {
-      width: 2.4rem;
-      height: 2.3rem;
+      width: 2rem;
+      height: 2rem;
       color: white;
     }
 
@@ -54,7 +51,6 @@
       height: 3.2rem;
       border-radius: 30px;
       background: black !important;
-      // background: #fff;
     }
     .switch {
       position: absolute;
@@ -63,6 +59,8 @@
     }
 
     .song {
+      font-size: var(--fw-13);
+      font-weight: var(--fw-4);
       display: -webkit-box;
       -webkit-line-clamp: 1;
       -webkit-box-orient: vertical;
@@ -70,6 +68,12 @@
     }
   }
 }
+
+// @media (max-width: 400px) {
+//   .mobilePlayer {
+//     margin-top: 1.4rem;
+//   }
+// }
 
 .dark {
   color: black;
