--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,6 +1,11 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
-
+/*!
+ * Bootstrap  v5.2.2 (https://getbootstrap.com/)
+ * Copyright 2011-2022 The Bootstrap Authors
+ * Copyright 2011-2022 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+ */
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -14692,6 +14697,7 @@ textarea.form-control-lg {
   --fs-30: 3rem;
   --fs-31: 3.1rem;
   --fs-32: 3.2rem;
+  --fs-33: 3.3rem;
   --fs-34: 3.4rem;
   --fs-39: 3.9rem;
   --fs-40: 4rem;
@@ -14700,6 +14706,7 @@ textarea.form-control-lg {
   --fs-50: 5rem;
   --fs-60: 6rem;
   --fs-61: 6.1rem;
+  --fs-62: 6.2rem;
   --fw-3: 300;
   --fw-4: 400;
   --fw-5: 500;
