--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -30,6 +30,7 @@
   --fs-30: 3rem;
   --fs-31: 3.1rem;
   --fs-32: 3.2rem;
+  --fs-33: 3.3rem;
   --fs-34: 3.4rem;
   --fs-39: 3.9rem;
   --fs-40: 4rem;
@@ -38,6 +39,7 @@
   --fs-50: 5rem;
   --fs-60: 6rem;
   --fs-61: 6.1rem;
+  --fs-62: 6.2rem;
 
   // * FONT WEIGHT
   --fw-3: 300;
