--- a/src/sections/sliders/components/blog-slider/index.module.scss
+++ b/src/sections/sliders/components/blog-slider/index.module.scss
@@ -5,6 +5,10 @@
   }
 }
 
+.image{
+  height: 24rem;
+}
+
 .title {
   padding-left: 1rem;
   display: -webkit-box;
@@ -44,7 +48,7 @@
   }
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1280px) {
   .card {
     max-height: 38.5rem !important;
     .header {
@@ -55,6 +59,10 @@
   .title {
     font-size: var(--fs-16) !important;
     font-weight: var(--fw-6) !important;
+  }
+
+  .image{
+    height: 16rem;
   }
 
   .footerSection {
