--- a/src/sections/sliders/components/hero-slider/index.module.scss
+++ b/src/sections/sliders/components/hero-slider/index.module.scss
@@ -9,9 +9,14 @@
     padding: 1rem;
     line-height: 5.15rem !important;
     height: 100%;
+    top: -35px;
+    position: relative;
   }
+  
 }
-
+.card-text{
+  font-size: 15px;
+}
 .onair{
   min-height: 5rem;
 }
