--- a/src/pages/blog/detail/index.module.scss
+++ b/src/pages/blog/detail/index.module.scss
@@ -11,6 +11,7 @@
     width: 100%;
     aspect-ratio: 3/1;
     object-fit: cover;
+    object-position: center;
   }
   &__content {
     font-size: var(--fs-28);
