--- a/src/sections/sliders/components/podcast-slider/index.module.scss
+++ b/src/sections/sliders/components/podcast-slider/index.module.scss
@@ -9,16 +9,16 @@
 }
 
 .title {
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  padding: 1rem;
-  font-size: var(--fs-20) !important;
-  font-weight: var(--fw-6) !important;
-  color: black;
-  line-height: 26.66px;
-  min-height: 7rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    padding: 1rem;
+    font-size: var(--fs-17) !important;
+    font-weight: var(--fw-6) !important;
+    color: black;
+    line-height: 26.66px !important;
+    min-height: 10rem;
 }
 .description {
   padding: 0 1rem;
@@ -26,7 +26,7 @@
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  font-size: var(--fs-16);
+  font-size: var(--fs-13);
   font-weight: var(--fw-4);
   line-height: 2.4rem;
   color: black;
@@ -45,15 +45,20 @@
   }
 
   &__podcastBtn {
-    width: 3.8rem;
-    height: 3.8rem;
-    border-radius: 50%;
     background-color: transparent;
+    border-radius: 50%;
+    height: 4rem;
+    width: 4rem;
+    border: 4px solid;
+    position: relative;
   }
 
   &__icon {
-    width: 1.8rem !important;
-    height: 1.8rem !important;
+    width: 1.6rem !important;
+    height: 1.6rem !important;
+    position: absolute;
+    top: 27%;
+    left: 27%;
   }
 }
 
