--- a/src/sections/sliders/index.module.scss
+++ b/src/sections/sliders/index.module.scss
@@ -7,6 +7,17 @@
     text-align: right;
     background-color: #e5e5e5 !important;
   }
+  :global(.swiper-pagination-bullet) {
+    width: 1rem;
+    height: 1rem;
+    border-radius: .5rem;
+  }
+:global(.swiper-pagination-bullet-active) {
+  background-color: #000;
+  width: 1rem;
+  height: 1rem;
+  border-radius: .5rem;
+} 
 
   &__header {
     font-size: var(--fs-31);
