--- a/src/components/ui/filter-bar/index.module.scss
+++ b/src/components/ui/filter-bar/index.module.scss
@@ -3,7 +3,7 @@
   align-items: center;
   height: 6.5rem;
   background-color: #212121;
-  margin-top: 10px;
+  // margin-top: 10px;
   width: 100%;
 
   &__icon {
