--- a/src/feature/sidebar/style.module.scss
+++ b/src/feature/sidebar/style.module.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   background-color: #eaeaea;
-  margin-top: 1rem;
+  // margin-top: 1rem;
   padding: 1.6rem;
   width: 100%;
   grid-gap: 0.5rem;
