--- a/src/layout/app-layout/style.module.scss
+++ b/src/layout/app-layout/style.module.scss
@@ -10,9 +10,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: calc(100vh - 4.925rem);
+  // height: calc(100vh - 4.925rem);
   position: fixed;
-  max-width: 18%;
+  max-width: 24%;
 
   &__description {
     margin: 1.2rem 3rem;
@@ -222,17 +222,17 @@
 .wrapper {
   display: flex;
   width: 100%;
-  padding-top: 4.925rem;
-  height: calc(100vh - 4.925rem);
+  padding-top: 6.1rem;
+  // height: calc(100vh - 4.925rem);
 
   &__side {
-    width: 18%;
+    width: 24%;
     max-width: 100%;
   }
 
   &__content {
-    padding: 2.5rem 1.7rem;
-    width: 82%;
+    // padding: 2.5rem 1.7rem;
+    width: 76%;
     max-width: 100%;
   }
 }
@@ -282,18 +282,18 @@
 }
 
 @media (max-width: 1400px) {
-  .wrapper {
-    &__side {
-      width: 20%;
-    }
+  // .wrapper {
+  //   &__side {
+  //     width: 20%;
+  //   }
 
-    &__content {
-      width: 80%;
-    }
-  }
+  //   &__content {
+  //     width: 80%;
+  //   }
+  // }
 
   .sidebar {
-    max-width: 20%;
+    // max-width: 20%;
     &__description {
       margin: 1rem 0.8rem;
       font-size: var(--fs-16);
