--- a/src/pages/video/index.module.scss
+++ b/src/pages/video/index.module.scss
@@ -1,5 +1,5 @@
 .video {
-  padding: 5.1rem;
+  padding: 5.7rem 6rem 18.3rem 5.3rem;
 
   .image {
     position: relative;
@@ -57,12 +57,24 @@
 
 .slider {
   :global(.swiper-wrapper) {
-    padding-bottom: 20px;
+    // padding-bottom: 2.4rem;
   }
   :global(.swiper-pagination) {
+    padding-top: 2.4rem !important;
     bottom: 0 !important;
     text-align: right;
     background-color: #e5e5e5 !important;
+  }
+  :global(.swiper-pagination-bullet) {
+    width: 1rem;
+    height: 1rem;
+    border-radius: 0.5rem;
+  }
+  :global(.swiper-pagination-bullet-active) {
+    background-color: #000;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 0.5rem;
   }
 
   &__header {
@@ -91,7 +103,7 @@
 }
 
 .card {
-  min-height: 31.8rem;
+  height: 36.4rem !important;
   border: none !important;
   border-radius: unset !important;
 
@@ -304,6 +316,10 @@
     .categorySection {
       padding-left: 2rem;
     }
+  }
+
+  .card {
+    height: 32.4rem !important;
   }
 
   .btn {
