--- a/src/layout/app-layout/style.module.scss
+++ b/src/layout/app-layout/style.module.scss
@@ -12,7 +12,7 @@
   justify-content: space-between;
   // height: calc(100vh - 4.925rem);
   position: fixed;
-  max-width: 24%;
+  width: 40rem;
 
   &__description {
     margin: 1.2rem 3rem;
@@ -28,9 +28,6 @@
     overflow: hidden;
   }
 }
-
-
-
 
 // Navbar
 .nav {
@@ -203,9 +200,6 @@
   }
 }
 
-
-
-
 .navbar {
   position: fixed !important;
 
@@ -223,17 +217,13 @@
   display: flex;
   width: 100%;
   padding-top: 6.1rem;
-  // height: calc(100vh - 4.925rem);
 
   &__side {
-    width: 24%;
-    max-width: 100%;
+    width: 40rem;
   }
 
   &__content {
-    // padding: 2.5rem 1.7rem;
-    width: 76%;
-    max-width: 100%;
+    width: calc(100% - 40rem);
   }
 }
 
@@ -281,19 +271,20 @@
   }
 }
 
-@media (max-width: 1400px) {
-  // .wrapper {
-  //   &__side {
-  //     width: 20%;
-  //   }
+@media (max-width: 1440px) {
+  .wrapper {
+    &__side {
+      width: 30rem;
+    }
 
-  //   &__content {
-  //     width: 80%;
-  //   }
-  // }
+    &__content {
+      width: calc(100% - 30rem);
+    }
+  }
 
   .sidebar {
-    // max-width: 20%;
+    width: 30rem;
+
     &__description {
       margin: 1rem 0.8rem;
       font-size: var(--fs-16);
@@ -310,8 +301,20 @@
   }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1280px) {
+  .wrapper {
+    &__side {
+      width: 30rem;
+    }
+
+    &__content {
+      width: calc(100% - 30rem);
+    }
+  }
+
   .sidebar {
+    width: 30rem;
+    
     &__description {
       -webkit-line-clamp: 29;
     }
