--- a/src/feature/sidebar/style.module.scss
+++ b/src/feature/sidebar/style.module.scss
@@ -194,19 +194,22 @@
   }
 
   .player {
-    max-height: fit-content;
+    height: 37.5rem;
     &__img {
-      object-fit: contain;
-      max-height: 40rem;
+      width: 100%;
+      height: 100%;
     }
   }
 }
 
 @media (max-width: 576px) {
   .player {
+    height: 37.5rem;
+
     &__img {
-      object-fit: cover;
-      max-height: 37.5rem;
+      width: 100%;
+      height: 100%;
+      object-fit: fill;
     }
   }
 
