--- a/src/pages/video/index.module.scss
+++ b/src/pages/video/index.module.scss
@@ -38,10 +38,8 @@
 }
 
 .btn {
-  //   bottom: 0;
-
   &__item {
-    border-radius: unset;
+    border-radius: unset !important;
     width: 26rem;
     height: 6rem;
     font-size: var(--fs-21) !important;
@@ -92,41 +90,15 @@
     line-height: 3rem;
   }
 }
-
-@media (max-width: 1300px) {
-  .slider {
-    &__header {
-      font-size: var(--fs-25);
-    }
-    &__seeAll {
-      font-size: var(--fs-16);
-      line-height: 2.5rem;
-    }
-  }
-}
-
 .card {
   height: 36.4rem !important;
   border: none !important;
   border-radius: unset !important;
 
-  .header {
-    // height: 18.2rem;
-    // min-height: 22rem;
-    // height: 15rem;
-  }
   &__body {
     box-shadow: 0px 3.79351px 60.6962px rgba(0, 0, 0, 0.07) !important;
   }
 }
-
-// .odd {
-//   box-shadow: 0px 3.79351px 60.6962px rgba(0, 0, 0, 0.07);
-// }
-
-// .even {
-//   box-shadow: 0px 3.79351px 60.6962px rgba(0, 0, 0, 0.07);
-// }
 
 .xx {
   aspect-ratio: unset;
@@ -145,20 +117,6 @@
   margin-top: 1rem !important;
   font-size: var(--fs-20) !important;
   font-weight: var(--fw-6) !important;
-}
-
-@media (max-width: 1300px) {
-  .card {
-    max-height: 38.5rem !important;
-    .header {
-      // min-height: 21.9rem !important;
-    }
-  }
-
-  .title {
-    font-size: var(--fs-16) !important;
-    font-weight: var(--fw-6) !important;
-  }
 }
 
 @media (max-width: 1400px) {
@@ -192,6 +150,7 @@
 
 @media (max-width: 1280px) {
   .video {
+    padding: 3rem 3rem 18.3rem 3rem;
     .image {
       &__title {
         font-size: var(--fs-44);
@@ -209,6 +168,28 @@
     }
   }
 
+  .slider {
+    &__header {
+      font-size: var(--fs-25);
+    }
+    &__seeAll {
+      font-size: var(--fs-16);
+      line-height: 2.5rem;
+    }
+  }
+
+  .card {
+    max-height: 38.5rem !important;
+    .header {
+      // min-height: 21.9rem !important;
+    }
+  }
+
+  .title {
+    font-size: var(--fs-16) !important;
+    font-weight: var(--fw-6) !important;
+  }
+
   .btn {
     &__item {
       border-radius: unset;
@@ -222,16 +203,16 @@
   .video {
     .image {
       &__title {
-        font-size: var(--fs-40);
+        font-size: var(--fs-25);
         font-weight: var(--fw-7);
       }
       &__description {
-        font-size: var(--fs-15);
+        font-size: var(--fs-14);
         font-weight: var(--fw-4);
       }
 
       .content {
-        max-width: 50rem;
+        max-width: 45rem;
       }
     }
   }
@@ -239,8 +220,10 @@
   .btn {
     &__item {
       border-radius: unset;
-      width: 20rem;
-      height: 4rem;
+      width: 13rem;
+      height: 3.5rem;
+      font-size: var(--fs-16) !important;
+      font-weight: var(--fw-5) !important;
     }
   }
 }
@@ -260,9 +243,7 @@
       }
 
       .content {
-        width: 47.5rem;
-        bottom: 5rem;
-        left: 6rem;
+        max-width: 47.5rem;
       }
     }
 
@@ -292,24 +273,22 @@
       &__title {
         font-size: var(--fs-21);
         font-weight: var(--fw-7);
-        // display: -webkit-box;
-        // -webkit-line-clamp: 2;
-        // -webkit-box-orient: vertical;
-        // overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
       }
       &__description {
         font-size: var(--fs-15);
         font-weight: var(--fw-4);
-        // display: -webkit-box;
-        // -webkit-line-clamp: 2;
-        // -webkit-box-orient: vertical;
-        // overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
       }
 
       .content {
-        width: 35rem;
-        bottom: 3rem;
-        left: 2rem;
+        max-width: 40rem;
       }
     }
 
@@ -326,7 +305,6 @@
     &__item {
       width: 13rem;
       height: 3.6rem;
-      border-radius: unset;
       font-size: var(--fs-14) !important;
       font-weight: var(--fw-6) !important;
     }
