--- a/src/pages/podcast/index.module.scss
+++ b/src/pages/podcast/index.module.scss
@@ -68,7 +68,34 @@ padding: 1rem;
 }
 }
 
-@media (max-width: 1300px) {
+
+@media (max-width: 1440px) {
+  .podcast{
+    padding: 3rem 2.2rem 9rem 2.3rem;
+    gap: 24px;
+  }
+
+  .box{
+    width: calc(25% - 24px) !important;
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+
+}
+
+@media (max-width: 1280px) {
+
+  .podcast{
+    padding: 3rem 2.2rem 9rem 2.3rem;
+    gap: 24px;
+  }
+
+  .box{
+    width: calc(25% - 24px) !important;
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+
 .card {
   max-height: 44.8rem;
   .image {
